[package]
name = "darknet"
version = "0.3.1"
authors = ["alianse77"]
edition = "2018"
description = "A Rust wrapper for Darknet, an open source neural network framework written in C and CUDA."
repository = "https://github.com/alianse777/darknet-rust"
license = "MIT"
keywords = ["darknet", "machine-learning", "deep-learning", "neural-networks", "yolo"]
readme = "./README.md"

[dependencies]
darknet-sys = "0.2"
image = "0.23"
libc = "0.2"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
sha2 = "0.8"
hex = "0.4"
argh = "0.1"
anyhow = "1.0"

[features]
buildtime-bindgen = ["darknet-sys/buildtime-bindgen"]
runtime = ["darknet-sys/runtime"]
dylib = ["darknet-sys/dylib"]
enable-opencv = ["darknet-sys/enable-opencv"]
enable-cuda = ["darknet-sys/enable-cuda"]
enable-cudnn = ["darknet-sys/enable-cudnn"]
